src/styles/streamhub-input.less
@import "/lib/livefyre-bootstrap/src/styles/fycons.less";
@import (reference) "/lib/livefyre-bootstrap/src/styles/mixins.less";
@import "/lib/livefyre-bootstrap/src/styles/modals.less";
@import "/lib/streamhub-sdk/src/modal/css/modal.less";
@import "/lib/streamhub-editor/src/styles/editor.less";

.lf-input-btn {
    .box-sizing(border-box);
    .user-select(none);
    background-color: #0f98ec;
    background-image: none;
    border-radius: 2px;
    border: 1px solid #1475b3;
    color: #fff;
    cursor: pointer;
    cursor: pointer;
    display: inline-block;
    font-family: @helvetica;
    font-size: 14px;
    font-weight: 500;
    height: 40px;
    letter-spacing: normal;
    line-height: 1.428571429;
    margin: 5px;
    outline: none;
    padding: 7px 12px;
    text-align: center;
    text-indent: 0px;
    text-shadow: none;
    text-transform: none;
    text-transform: none;
    vertical-align: middle;
    white-space: nowrap;
    width: 180px;
    word-spacing: normal;
}

.lf-input-btn.disabled {
    .opacity(0.5);
}

.lf-input-btn:hover {
    background-color: #0f98ec;
    .box-shadow(inset 1px 0px 2px 0px rgba(0, 0, 0, 0.1));
}

.lf-input-btn:active {
    background-color: #118fe0;
    border-color: #105a89;
    .box-shadow(inset 1px 0px 2px 0px rgba(0, 0, 0, 0.3));
}

.lf-hub-upload-btn .fycon-composer-photo {
    font-size: 16px;
    margin-left: 10px;
    position: relative;
    top: -1px;
}

.hub-upload {
    min-width:560px;
    min-height:432px;
}

.hub-modal-input-wrapper {
    .box-shadow(0 5px 15px rgba(0, 0, 0, 0.5));
    background-clip: padding-box;
    background-color: #ffffff;
    border-radius: 3px;
    border: 0;
    color: #2f3440;
    display: block;
    margin: 100px 20% 0;
    outline: none;
    position: relative;
    text-align: center;
    max-width: 650px;
    min-width: 320px;

    .lf-modal-body {
        padding: 30px 30px 50px;
    }
}

.hub-modal-input-header {
    background-color: #f7f7f5;
    border-bottom: 1px solid #ececea;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    color: #a2a3a7;
    font: normal 20px/20px @helvetica;
    padding: 15px;
}

.lf-content-editor {
    position: relative;
    border: 1px solid #ececea;
    text-align: left;
    border-radius: 3px;
    background-color: #ffffff;
    .box-shadow(0 1px 1px rgba(0, 0, 0, 0.25));
}

.lf-content-editor .lf-btn-wrapper {
    background-color: #f8f8f8;
    text-align: right;
    border-top: 1px solid #ececea;
    padding: 6px;
}

.lf-content-editor .lf-user-info {
    margin: 26px 30px 20px;
    font-weight: bold;
    color: #474C52;
}

.lf-editor-container {
/* !lf-bootstrap */
    margin-bottom: 20px;
}

.hub-modal-content-view iframe {
    position: relative;
    margin: 100px auto 0;
    display: block;
    border: 0;
}


/**
 * Kinda crazy overrides
 */
.lf-editor-upload {
    float: left;
    margin: 5px;
}

.lf-editor-upload > .fycon-composer-photo:before {
    font-size: 1.3em;
    opacity: 0.25;
    padding: 2px;
}

.lf-attachment-list-view > .hub-list {
    background-color: #f8f8f8;
    border-color: #ececea;
    border-style: solid;
    border-width: 1px 0 0 0;
    position:relative;
    width: 100%;
}

.lf-attachment-discard {
    background-image: data-uri('../images/photo_x.png');
    cursor: pointer;
    font-size: 30px;
    height: 32px;
    position: absolute;
    right: -15px;
    text-indent: -9999px;
    top: -15px;
    width: 32px;

    @media only screen and (-webkit-min-device-pixel-ratio: 2) {
        background-image: data-uri('../images/photo_x@2x.png');
        background-size: 32px 32px;
    }
}

.lf-attachment {
    background-color: #fff;
    display: inline-block;
    margin: 20px 0 0 20px;
    position: relative;

    &:last-child {
        margin-bottom: 20px;
    }
}

.lf-attachment-thumbnail-contained {
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    height: 200px;
    width: 200px;
}

.lf-attachment-thumbnail {
    height: 200px;
    width: auto;
}

